--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: python
 python:
   - 2.7
-  - 3.5
 
 install:
   - pip install -r requirements.txt
   - python setup.py develop
 
 script:
-  - nosetests
+  - nosetests -v
