Cleanup coverage reports.
The tests were added to the reports. Use a `.coveragerc` to fix this.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 script:
   - coverage erase
-  - coverage run --source vixen -p -m nose.core -v vixen
+  - coverage run -p -m nose.core -v vixen
   - coverage combine
 
 after_success:
