--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - pip install coverage
+  - pip install coverage codecov
   - python setup.py develop
 
 script:
@@ -14,3 +14,4 @@ script:
 
 after_success:
   - coverage report
+  - codecov
