--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,18 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - pip install coverage codecov
+  - pip install coverage codecov selenium
   - python setup.py develop
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script:
   - coverage erase
   - coverage run -p -m nose.core -v vixen/tests
+  - coverage run -p -m nose.core -v vixen/integration_tests
   - coverage combine
 
 after_success:
