Update readme and add logo to desktop file.

--- a/installer/ViXeN.desktop
+++ b/installer/ViXeN.desktop
@@ -5,3 +5,4 @@ Comment=View Extract and Annotate media application
 Exec=bash -c 'cd $(dirname %k) && ./vixen'
 Terminal=false
 Type=Application
+Icon=vixen.png
